moved the task and category forms, fixed the off-center black line in the cross

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -96,6 +96,7 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 400px;
+    position: relative;
 }
 
 .delete-button {
@@ -124,29 +125,27 @@ h1 {
 }
 
 .category-task-buttons {
-    grid-column: 2;
     text-align: center;
+    margin-bottom: 1em;
 }
 
 .grid-item.with-arrows::before {
-    content: '';
-    border-top: 20px solid black;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    position: absolute;
-    left: 50%;
-    bottom: -1.5%;
-    transform: translateX(-50%);
-}
-
-.grid-item.with-arrows::after {
     content: '';
     border-bottom: 20px solid black;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     position: absolute;
-    right: 48%;
-    top: -1%;
+    top: -5%;
+    transform: translateX(-50%);
+}
+
+.grid-item.with-arrows::after {
+    content: '';
+    border-top: 20px solid black;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    position: absolute;
+    bottom: -105%;
     transform: translateX(-50%);
 }
 
@@ -159,7 +158,7 @@ h1 {
 /* New styles for mobile responsiveness */
 @media screen and (max-width: 600px) {
 
-    p[style*="transform: translate(-50%, -50%)"] {
+    /* p[style*="transform: translate(-50%, -50%)"] {
         top: 20%;
         left: 50%;
         transform: translate(-50%, -20%);
@@ -181,5 +180,5 @@ h1 {
         top: 50%;
         right: 20%;
         transform: translate(20%, -50%);
-    }
+    } */
 }
